RS + CW | #124 | add init scripts for running objective8 as service